--- a/bib/references.bib
+++ b/bib/references.bib
@@ -1,14 +1,109 @@
-@article{Beck2016Visual,
-  abstract = {Bibiographic data such as collections of scientific articles and citation networks have been studied extensively in information visualization and visual analytics research. Powerful systems have been built to support various types of bibliographic analysis, but they require some training and cannot be used to disseminate the insights gained. In contrast, we focused on developing a more accessible visual analytics system, called SurVis, that is ready to disseminate a carefully surveyed literature collection. The authors of a survey may use our Web-based system to structure and analyze their literature database. Later, readers of the survey can obtain an overview, quickly retrieve specific publications, and reproduce or extend the original bibliographic analysis. Our system employs a set of selectors that enable users to filter and browse the literature collection as well as to control interactive visualizations. The versatile selector concept includes selectors for textual search, filtering by keywords and meta-information, selection and clustering of similar publications, and following citation links. Agreement to the selector is represented by word-sized sparkline visualizations seamlessly integrated into the user interface. Based on an analysis of the analytical reasoning process, we derived requirements for the system. We developed the system in a formative way involving other researchers writing literature surveys. A questionnaire study with 14 visual analytics experts confirms that SurVis meets the initially formulated requirements.},
-  author = {Beck, Fabian and Koch, Sebastian and Weiskopf, Daniel},
-  doi = {10.1109/TVCG.2015.2467757},
-  journal = {IEEE Transactions on Visualization and Computer Graphics},
-  keywords = {type:system, visual_analytics, sparklines, information_retrieval, clustering, literature_browser},
-  number = {01},
-  publisher = {IEEE},
-  volume = {22},
-  series = {TVCG},
-  title = {Visual Analysis and Dissemination of Scientific Literature Collections with {SurVis}},
-  url = {http://www.visus.uni-stuttgart.de/uploads/tx_vispublications/vast15-survis.pdf},
-  year = {2016}
+
+@article{Bazargani2024MSRGCN,
+  author = {Bazargani, R. and Fazli, L. and Gleave, M. and Goldenberg, L. and Bashashati, A. and Salcudean, S.},
+  title = {Multi-scale relational graph convolutional network for multiple instance learning in histopathology images},
+  journal = {Medical Image Analysis},
+  volume = {96},
+  year = {2024},
+  pages = {103197},
+  doi = {10.1016/j.media.2024.103197},
+  keywords = {gnn, mil, histopathology}
+}
+
+@article{Brussee2025GNNTrends,
+  author = {Brussee, S. and Buzzanca, G. and Schrader, A. M. and Kers, J.},
+  title = {Graph neural networks in histopathology: Emerging trends and future directions},
+  journal = {Medical Image Analysis},
+  volume = {101},
+  year = {2025},
+  pages = {103444},
+  doi = {10.1016/j.media.2024.103444},
+  keywords = {gnn, survey, trends}
+}
+
+@inproceedings{Li2024WiKG,
+  author = {Li, J. and Chen, Y. and Chu, H. and Sun, Q. and Guan, T. and Han, A. and He, Y.},
+  title = {Dynamic graph representation with knowledge-aware attention for histopathology whole slide image analysis},
+  booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages = {11323--11332},
+  year = {2024},
+  doi = {10.1109/CVPR52733.2024.01076},
+  keywords = {gnn, attention, wsi}
+}
+
+@inproceedings{Behrouz2024GraphMamba,
+  author = {Behrouz, A. and Hashemi, F.},
+  title = {Graph Mamba: Towards learning on graphs with state space models},
+  booktitle = {Proceedings of the 30th ACM SIGKDD Conference on Knowledge Discovery and Data Mining},
+  pages = {119--130},
+  year = {2024},
+  doi = {10.1145/3637528.3672044},
+  keywords = {gnn, mamba, ssm}
+}
+
+@inproceedings{Chen2024CaMIL,
+  author = {Chen, K. and Sun, S. and Zhao, J.},
+  title = {CaMIL: Causal multiple instance learning for whole slide image classification},
+  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume = {38},
+  number = {2},
+  pages = {1120--1128},
+  year = {2024},
+  doi = {10.1609/aaai.v38i2.27873},
+  keywords = {causal, mil, wsi}
+}
+
+@article{Wang2024GraphMambaSSM,
+  author = {Wang, C. and Tsepa, O. and Ma, J. and Wang, B.},
+  title = {Graph-Mamba: Towards long-range graph sequence modeling with selective state spaces},
+  journal = {arXiv preprint arXiv:2402.00789},
+  year = {2024},
+  doi = {10.48550/arXiv.2402.00789},
+  keywords = {gnn, mamba, ssm, long_range, causal}
+}
+
+@article{Jiang2024DLBreast,
+  author = {Jiang, B. and Bao, L. and He, S. and Chen, X. and Jin, Z. and Ye, Y.},
+  title = {Deep learning applications in breast cancer histopathological imaging: Diagnosis, treatment, and prognosis},
+  journal = {Breast Cancer Research},
+  volume = {26},
+  number = {1},
+  pages = {137},
+  year = {2024},
+  doi = {10.1186/s13058-024-01895-6},
+  keywords = {breast_cancer, wsi, deep_learning}
+}
+
+@article{Wang2024CHIEF,
+  author = {Wang, X. and Zhao, J. and Marostica, E. and Yuan, W. and Jin, J. and Zhang, J. and Yu, K. H.},
+  title = {A pathology foundation model for cancer diagnosis and prognosis prediction},
+  journal = {Nature},
+  volume = {634},
+  number = {8035},
+  pages = {970--978},
+  year = {2024},
+  doi = {10.1038/s41586-024-07894-z},
+  keywords = {foundation_model, cancer_prognosis}
+}
+
+@article{Hua2024PathoDuet,
+  author = {Hua, S. and Yan, F. and Shen, T. and Ma, L. and Zhang, X.},
+  title = {PathoDuet: Foundation models for pathological slide analysis of H&E and IHC stains},
+  journal = {Medical Image Analysis},
+  volume = {97},
+  pages = {103289},
+  year = {2024},
+  doi = {10.1016/j.media.2024.103289},
+  keywords = {foundation_model, wsi, contrastive_learning}
+}
+
+@article{Waqas2024MILSurvey,
+  author = {Waqas, M. and Ahmed, S. U. and Tahir, M. A. and Wu, J. and Qureshi, R.},
+  title = {Exploring multiple instance learning (MIL): A brief survey},
+  journal = {Expert Systems with Applications},
+  volume = {232},
+  pages = {123893},
+  year = {2024},
+  doi = {10.1016/j.eswa.2024.123893},
+  keywords = {mil, survey, wsi}
 }
